# misc

./: .gitignore  LFH  README  gnu.url  grub-rescue.txt
FHS/: 00-WHAT.txt  yyg-01.txt
auto-tools/: 01-WHAT.txt  02-GNU-DOCS.txt  02-HOWTO.txt  03-RELATIVE.txt  04-LIBTOOL.txt  05-EXAMPLES.txt  06-EXAMPLES.txt  07-CONFIGURE.txt
auto-tools/example/hello/: configure  configure.ac  hello.c  makefile.in
auto-tools/example/hello/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
cross-toolchain/: 01-GCC.txt  (+2 more)
src/: Makefile.am  Makefile.in
src/common/: Makefile.am  Makefile.in  conf-bin.c  conf.c  debug.c  file-io.c  mkdir-p.c  pathname-tmp.c
src/disk/: Makefile.am  Makefile.in  disk-event.c  disk-info.c  disk-led.c  disk-main.c  disk-mpatrol.c  disk-tmpfs.c
src/include/: config-os.h
src/include/wis/: config-gcc.h  config-wis.h  disk.h  global-conf.h  sysinfo.h
src/include/wis/common/: conf.h  debug.h  unistd.h
src/include/wis/sysinfo/: sys-alarm.h  sys-basic.h  sys-network.h  sys-priority.h
src/iscsi/: Makefile.in
src/lvm2/: Makefile.in
src/nas/: Makefile.in
src/net/: Makefile.in
src/raid/: Makefile.in
src/sysfs/: sysfs.h
src/sysinfo/: Makefile.am  Makefile.in  sys-alarm.c  sys-basic.c  sys-network.c  sys-priority.c
src/tests/: Makefile.am  Makefile.in  Makefile.rules
src/tests/common/: Makefile.am  Makefile.in  test-conf.c  test-debug.c  test-global-conf.c  test-unistd.c
src/tests/disk/: Makefile.am  Makefile.in  test-disk-tmpfs.c
src/utils/: Makefile.in
src/wis-common/: Makefile.am  Makefile.in  global-conf.c
(+210 files in other folders)
